--- a/index.html
+++ b/index.html
@@ -1,12 +1,212 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 <head>
-<title>HTML Tutorial</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menu Pizzeria - La Deliziosa</title>
+    
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f8f8;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #c0392b; /* Rosso pizza */
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+
+        h1 {
+            margin: 0;
+            font-size: 2.5em;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Barra di Navigazione */
+        nav {
+            background-color: #2c3e50;
+            padding: 10px 0;
+            text-align: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 20px;
+            margin: 0 10px;
+            font-weight: bold;
+            border-radius: 4px;
+            transition: background-color 0.3s;
+        }
+
+        nav a:hover {
+            background-color: #f39c12; /* Arancio */
+        }
+
+        /* Contenitore Menu */
+        .menu-container {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: white;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            border-radius: 8px;
+        }
+
+        .menu-section {
+            margin-bottom: 30px;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            background-color: #fff;
+            scroll-margin-top: 60px; /* Offset per l'ancora (navigazione) */
+        }
+
+        .menu-section h2 {
+            color: #c0392b; 
+            border-bottom: 3px solid #f39c12; 
+            padding-bottom: 10px;
+            margin-top: 0;
+            font-size: 2em;
+        }
+
+        .menu-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            padding: 12px 0;
+            border-bottom: 1px dashed #eee;
+        }
+
+        .menu-item:last-child {
+            border-bottom: none;
+        }
+
+        .item-details {
+            flex-grow: 1;
+        }
+
+        .item-details h3 {
+            margin: 0;
+            font-size: 1.2em;
+            color: #2c3e50; 
+        }
+
+        .item-details p {
+            margin: 5px 0 0 0;
+            color: #7f8c8d; 
+            font-style: italic;
+            font-size: 0.9em;
+        }
+
+        .price {
+            font-weight: bold;
+            font-size: 1.3em;
+            color: #27ae60; 
+            min-width: 70px;
+            text-align: right;
+            margin-left: 20px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 15px 0;
+            background-color: #333;
+            color: #bbb;
+            margin-top: 30px;
+            font-size: 0.9em;
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <h1>Menu Pizzeria - La Deliziosa</h1>
+    </header>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+    <nav>
+        <a href="#pizze">🍕 Pizze</a>
+        <a href="#dolci">🍰 Dolci</a>
+        <a href="#bevande">🍹 Bevande</a>
+    </nav>
 
+    <div class="menu-container">
+
+        <section class="menu-section" id="pizze">
+            <h2>🍕 Pizze</h2>
+            <div class="menu-item">
+                <div class="item-details">
+                    <h3>Margherita</h3>
+                    <p>Pomodoro, mozzarella, basilico fresco.</p>
+                </div>
+                <span class="price">€ 6.00</span>
+            </div>
+            <div class="menu-item">
+                <div class="item-details">
+                    <h3>Capricciosa</h3>
+                    <p>Pomodoro, mozzarella, funghi, carciofi, prosciutto cotto, olive.</p>
+                </div>
+                <span class="price">€ 8.50</span>
+            </div>
+            <div class="menu-item">
+                <div class="item-details">
+                    <h3>Diavola</h3>
+                    <p>Pomodoro, mozzarella, salame piccante.</p>
+                </div>
+                <span class="price">€ 7.50</span>
+            </div>
+        </section>
+
+        <section class="menu-section" id="dolci">
+            <h2>🍰 Dolci</h2>
+            <div class="menu-item">
+                <div class="item-details">
+                    <h3>Tiramisù</h3>
+                    <p>Classico italiano con savoiardi, mascarpone e caffè.</p>
+                </div>
+                <span class="price">€ 4.50</span>
+            </div>
+            <div class="menu-item">
+                <div class="item-details">
+                    <h3>Panna Cotta</h3>
+                    <p>Con salsa ai frutti di bosco o caramello.</p>
+                </div>
+                <span class="price">€ 4.00</span>
+            </div>
+        </section>
+
+        <section class="menu-section" id="bevande">
+            <h2>🍹 Bevande</h2>
+            <div class="menu-item">
+                <div class="item-details">
+                    <h3>Acqua Naturale/Frizzante (1L)</h3>
+                </div>
+                <span class="price">€ 2.00</span>
+            </div>
+            <div class="menu-item">
+                <div class="item-details">
+                    <h3>Coca-Cola (lattina)</h3>
+                </div>
+                <span class="price">€ 3.00</span>
+            </div>
+            <div class="menu-item">
+                <div class="item-details">
+                    <h3>Birra Artigianale (0.5L)</h3>
+                </div>
+                <span class="price">€ 5.50</span>
+            </div>
+        </section>
+
+    </div>
+
+    <footer>
+        <p>&copy; 2025 La Deliziosa Pizzeria</p>
+    </footer>
 </body>
 </html>
